--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,21 +18,21 @@
                 <li> <a class="navigation-link" href="jeux.html">Jeux</a></li>
                 <li> <a class="navigation-link" href="scan.html">Scan</a></li>
                 <li> <a class="navigation-link" href="episodes.html">Episodes</a></li>
-                <img src="images/bllogo.webp" alt="" classe="logo" style="width: 40px;">
+                <img src="bllogo.webp" alt="" classe="logo" style="width: 40px;">
             </ul>
     </div>
     <div id="demo" class="carousel slide" data-ride="carousel">
         <div class="slideshow-container">
             <div class="mySlides fade">
-                <img src="images/blepi.jpg" alt="" style="width: 100%;">
+                <img src="blepi.jpg" alt="" style="width: 100%;">
                 <div class="text">Episodes</div>
             </div>
             <div class="mySlides fade">
-                <img src="images/blscan.jfif" alt="" style="width: 100%;">
+                <img src="blscan.jfif" alt="" style="width: 100%;">
                 <div class="text">Scan</div>
             </div>
             <div class="mySlides fade">
-                <img src="images/bljeux.jpg" alt="" style="width: 100%;">
+                <img src="bljeux.jpg" alt="" style="width: 100%;">
                 <div class="text">Jeux</div></div>
             </div>
             <a class="prev" onclick="plusSlides(-1)">&#10094</a>
