--- a/episodes.html
+++ b/episodes.html
@@ -9,7 +9,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap');
         </style>
     <title>Episodes</title>
-    <link rel="icon" href="images/bllogo.webp" type="image/x-icon">
+    <link rel="icon" href="bllogo.webp" type="image/x-icon">
 
 <ol>
     <li> <a class="" href="https://drive.google.com/file/d/1jmkNqwE3D1JJEvR1erQx2rpufANmW7qw/view?usp=sharing">Episode 1</a></li>
