--- a/index.html
+++ b/index.html
@@ -25,15 +25,13 @@
         <div class="slideshow-container">
             <div class="mySlides fade">
                 <img src="blepi.jpg" alt="" style="width: 100%;">
-                <div class="text">Episodes</div>
             </div>
             <div class="mySlides fade">
                 <img src="blscan.jfif" alt="" style="width: 100%;">
-                <div class="text">Scan</div>
             </div>
             <div class="mySlides fade">
                 <img src="bljeux.jpg" alt="" style="width: 100%;">
-                <div class="text">Jeux</div></div>
+                </div>
             </div>
             <a class="prev" onclick="plusSlides(-1)">&#10094</a>
             <a class="next" onclick="plusSlides(1)">&#10095</a>
