--- a/scan.html
+++ b/scan.html
@@ -9,7 +9,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap');
         </style>
     <title>Scan</title>
-    <link rel="icon" href="images/bllogo.webp" type="image/x-icon">
+    <link rel="icon" href="bllogo.webp" type="image/x-icon">
 
     <ol>
         <li> <a class="" href="">Chapitre 200</a></li>
