--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <div class="Subscribe">
             <h1 class="A">BlueVision</h1>
-            <h3 class="A">BlueVision est un site qui vous permet de regarder les épisodes et de lire les derniers chapitres de Blue Lock gratuitement. 
+            <h3 class="A">BlueVision est un site qui vous permet de regarder les épisodes de Blue Lock gratuitement. 
                 <br>Si vous rencontrez des problèmes, n'hésitez pas à me contacter sur Discord : fayçal#9899</br>
             </h3>
         </div>
