--- a/jeux.html
+++ b/jeux.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="stylejeux.css">
+    <link rel="stylesheet" href="css/stylejeux.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,11 +9,11 @@
         @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap');
         </style>
     <title>Jeux</title>
-    <link rel="icon" href="bllogo.webp" type="image/x-icon">
+    <link rel="icon" href="images/bllogo.webp" type="image/x-icon">
     <ol>
-        <li> <a class="" href="">Tier List</a></li>
-        <li> <a class="" href="">Dialogue</a></li>
-        <li> <a class="" href="">Compo Personnage</a></li>
+        <li> <a class="" href="https://game8.jp/bluelockpwc/507498">Meilleurs personnages</a></li>
+        <li> <a class="" href="https://game8.jp/bluelockpwc/510658">Meilleures cartes support</a></li>
+        <li> <a class="" href="https://game8.jp/bluelockpwc/510315">Compositions d'équipes</a></li>
     </ol>
     
     </body>
