--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="navbar">
             <ul>
                 <li> <a class="navigation-link" href="jeux.html">Jeux</a></li>
-                <li> <a class="navigation-link" href="scan.html">Scan</a></li>
+                <li> <a class="navigation-link" href="attente.html">Scan</a></li>
                 <li> <a class="navigation-link" href="episodes.html">Episodes</a></li>
                 <img src="bllogo.webp" alt="" classe="logo" style="width: 40px;">
             </ul>
